syntax = "proto3";

package inventory;

option go_package = "api-gateway/proto/inventorypb";


message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
}

message CreateProductRequest {
  Product product = 1;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message ListProductsRequest {}

message ProductResponse {
  Product product = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message Empty {}

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}
