syntax = "proto3";

package order;

option go_package = "api-gateway/proto/orderpb";

message ProductItem {
  string product_id = 1;
  int32 quantity = 2;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated ProductItem items = 3;
  string status = 4;
  int64 created_at = 5;
}

message CreateOrderRequest {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}
message ListOrdersRequest {
  string user_id = 1;
}

message OrderResponse {
  Order order = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
